--- a/mr-banma/index.html
+++ b/mr-banma/index.html
@@ -80,13 +80,13 @@
             <div class="bm-search">
                 <ul class="bm-search-linklist">
                     <li class="bm-search-linklist-items">
-                        <a href="javascript:" onclick="goSampleCart()">
+                        <a href="javascript:" onclick="">
                             <img class="icon-s" src="./files/yangben.png" alt="">
                             <span>样本</span>
                         </a>
                     </li>
                     <li class="bm-search-linklist-items">
-                        <a href="javascript:" onclick="goCart()">
+                        <a href="javascript:" onclick="">
                             <img class="icon-s" src="./files/cart.png" alt="">
                             <span>购物车</span>
                             <span class="bm-cart-count">&nbsp; 0 &nbsp;</span>
