--- a/mr-banma/index.html
+++ b/mr-banma/index.html
@@ -199,13 +199,13 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM56-20"><a href="/index.php/Category/index/cat_id/20.html">香格里拉帘</a>
+            <li class="bm-nav-xls-left-li" id="BM56-20"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/20.html">香格里拉帘</a>
             </li>
-            <li class="bm-nav-xls-left-li" id="BM56-4"><a href="/index.php/Category/index/cat_id/4.html">斑马帘</a></li>
-            <li class="bm-nav-xls-left-li" id="BM56-33"><a href="/index.php/Category/index/cat_id/33.html">蜂巢帘</a></li>
-            <li class="bm-nav-xls-left-li" id="BM56-53"><a href="/index.php/Category/index/cat_id/53.html">垂直帘</a></li>
-            <li class="bm-nav-xls-left-li" id="BM56-54"><a href="/index.php/Category/index/cat_id/54.html">百叶帘</a></li>
-            <li class="bm-nav-xls-left-li" id="BM56-65"><a href="/index.php/Category/index/cat_id/65.html">多层调光帘</a>
+            <li class="bm-nav-xls-left-li" id="BM56-4"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/4.html">斑马帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM56-33"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/33.html">蜂巢帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM56-53"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/53.html">垂直帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM56-54"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/54.html">百叶帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM56-65"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/65.html">多层调光帘</a>
             </li>
         </ul>
     </div>
@@ -218,7 +218,7 @@
         <p>集窗纱、百叶、卷帘三者功能为一体的完美设计，三层组织结构，可任意调节光线，清晰的纱网，古朴典雅的素色情调，造就极佳的视觉效果。</p>
     </div>
     <div class="bm-nav-xls-right BM56-20 hide">
-        <video src="/Public/video/mrbanma_xianggelilialian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_xianggelilialian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb2034ee324f.png" width="560"
                height="300"></video>
 
@@ -233,7 +233,7 @@
         <p>斑马帘是一布一纱相结合的两层面料结构，通过前后两层面料的交错实现调光功能。</p>
     </div>
     <div class="bm-nav-xls-right BM56-4 hide">
-        <video src="/Public/video/mrbanma_banmalian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_banmalian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2021-05-19/60a46179da20f.jpg" width="560"
                height="300"></video>
 
@@ -249,7 +249,7 @@
     </div>
     <div class="bm-nav-xls-right BM56-33 hide">
 
-        <a href="/index.php/Category/index/cat_id/33.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/33.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb204c9802c7.jpg"></a>
 
 
@@ -265,7 +265,7 @@
     </div>
     <div class="bm-nav-xls-right BM56-53 hide">
 
-        <a href="/index.php/Category/index/cat_id/53.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/53.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-02-25/6036f912effbf.jpg"></a>
 
 
@@ -280,7 +280,7 @@
     </div>
     <div class="bm-nav-xls-right BM56-54 hide">
 
-        <a href="/index.php/Category/index/cat_id/54.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/54.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-02-25/6036fb7caaac5.jpg"></a>
 
 
@@ -295,7 +295,7 @@
     </div>
     <div class="bm-nav-xls-right BM56-65 hide">
 
-        <a href="/index.php/Category/index/cat_id/65.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/65.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-06-12/60c41c41b4289.jpg"></a>
 
 
@@ -305,14 +305,14 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM6-22"><a href="/index.php/Category/index/cat_id/22.html">玻纤卷帘</a></li>
-            <li class="bm-nav-xls-left-li" id="BM6-25"><a href="/index.php/Category/index/cat_id/25.html">100%全遮光卷帘</a>
+            <li class="bm-nav-xls-left-li" id="BM6-22"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/22.html">玻纤卷帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM6-25"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/25.html">100%全遮光卷帘</a>
             </li>
-            <li class="bm-nav-xls-left-li" id="BM6-28"><a href="/index.php/Category/index/cat_id/28.html">提花大师卷帘</a>
+            <li class="bm-nav-xls-left-li" id="BM6-28"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/28.html">提花大师卷帘</a>
             </li>
-            <li class="bm-nav-xls-left-li" id="BM6-29"><a href="/index.php/Category/index/cat_id/29.html">阳光面料卷帘</a>
+            <li class="bm-nav-xls-left-li" id="BM6-29"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/29.html">阳光面料卷帘</a>
             </li>
-            <li class="bm-nav-xls-left-li" id="BM6-31"><a href="/index.php/Category/index/cat_id/31.html">经典卷帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM6-31"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/31.html">经典卷帘</a></li>
         </ul>
     </div>
     <div class="bm-nav-xls-center BM6-22 hide">
@@ -324,7 +324,7 @@
         <p>面料中加入玻璃纤维，防水、防火、防油污。高遮光度，保护隐私空间。阻隔紫外线，保温隔热。</p>
     </div>
     <div class="bm-nav-xls-right BM6-22 hide">
-        <video src="/Public/video/mrbanma_juanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_juanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-04/5fa21a354aa78.jpg" width="560"
                height="300"></video>
 
@@ -339,7 +339,7 @@
         <p>全新贴合工艺，双面布料效果，反正面都好用的100%全遮光高端卷帘。</p>
     </div>
     <div class="bm-nav-xls-right BM6-25 hide">
-        <video src="/Public/video/mrbanma_juanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_juanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb204abe5b37.jpg" width="560"
                height="300"></video>
 
@@ -354,7 +354,7 @@
         <p>提花设计、简约大气，尤其适合办公室、五星级酒店、高级会所等使用。 </p>
     </div>
     <div class="bm-nav-xls-right BM6-28 hide">
-        <video src="/Public/video/mrbanma_juanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_juanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb205952d71c.jpg" width="560"
                height="300"></video>
 
@@ -369,7 +369,7 @@
         <p>防水、防晒、防火、防霉、防甲醛的阳光面料卷帘，更大程度的满足消费者需求，同时阳光面料多种素颜的色料与室内主体装修色彩协调，也可衬出环境的高雅。</p>
     </div>
     <div class="bm-nav-xls-right BM6-29 hide">
-        <video src="/Public/video/mrbanma_juanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_juanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb20b5d84844.jpg" width="560"
                height="300"></video>
 
@@ -385,7 +385,7 @@
             卷帘作为窗饰行业的一款成熟度高、应用广泛的产品，备受广大采购商和消费者的青睐，它既可以减光、遮光，以适应人对光线不同强度的需求；又可以防火、防风、除尘、保暖、消声、隔热、防辐射、防紫外线等，改善居室气候与环境。已成为不可缺少的、功能性和装饰性完美结合的室内装饰品。</p>
     </div>
     <div class="bm-nav-xls-right BM6-31 hide">
-        <video src="/Public/video/mrbanma_juanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_juanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2020-11-16/5fb204bb00b8d.jpg" width="560"
                height="300"></video>
 
@@ -396,7 +396,7 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM7-36"><a href="/Category/index/cat_id/36.html">户外防风卷帘</a></li>
+            <li class="bm-nav-xls-left-li" id="BM7-36"><a href="https://www.mr-banma.com/Category/index/cat_id/36.html">户外防风卷帘</a></li>
             <li class="bm-nav-xls-left-li" id="BM7-55"><a href="https://www.mr-banma.com/Goods/goodsInfo/id/75.html">户外遮阳伞</a>
             </li>
             <li class="bm-nav-xls-left-li" id="BM7-67"><a href="https://www.mr-banma.com/Goods/goodsInfo/id/80.html">曲臂遮阳篷</a>
@@ -414,7 +414,7 @@
         <p>斑马先生防风卷帘，可以抗飓风的防风卷帘！更简洁，更平顺，更抗风！</p>
     </div>
     <div class="bm-nav-xls-right BM7-36 hide">
-        <video src="/Public/video/fangfengjuanlian.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/fangfengjuanlian.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2021-08-13/61161f614c633.jpg" width="560"
                height="300"></video>
 
@@ -470,9 +470,9 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM57-58"><a href="/index.php/Category/index/cat_id/58.html">除甲醛窗帘</a>
+            <li class="bm-nav-xls-left-li" id="BM57-58"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/58.html">除甲醛窗帘</a>
             </li>
-            <li class="bm-nav-xls-left-li" id="BM57-59"><a href="/index.php/Category/index/cat_id/59.html">五防功能</a></li>
+            <li class="bm-nav-xls-left-li" id="BM57-59"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/59.html">五防功能</a></li>
             <li class="bm-nav-xls-left-li" id="BM57-60"><a
                     href="https://www.mr-banma.com/index.php/Singlepage/diandong.html">电动智能</a></li>
             <li class="bm-nav-xls-left-li" id="BM57-61"><a
@@ -488,7 +488,7 @@
         <p>斑马先生联合韩国国立研究所共同研发，采用行业领先的沸石晶体分子筛除甲醛技术，吸附且分解甲醛，拒绝二次污染，除甲醛功效可达3年！为您打造绿色舒适的健康之家，孩子成长路上更放心，家人生活更安心。</p>
     </div>
     <div class="bm-nav-xls-right BM57-58 hide">
-        <video src="/Public/video/chujiaquan.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/chujiaquan.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2021-05-09/6097969f047a0.jpg" width="560"
                height="300"></video>
 
@@ -503,7 +503,7 @@
         <p>随着时代的发展，科技的进步，人们对窗帘的需求不再仅仅只是遮挡，由此“五防”斑马帘应运而生，“防水、防火、防晒、防霉、防甲醛”，功能性更强，质量更优。</p>
     </div>
     <div class="bm-nav-xls-right BM57-59 hide">
-        <video src="/Public/video/mrbanma_wufang.mp4" controls="controls"
+        <video src="https://www.mr-banma.com/Public/video/mrbanma_wufang.mp4" controls="controls"
                poster="https://www.mr-banma.com/Uploads/images/2021-05-09/60979b458e79f.jpg" width="560"
                height="300"></video>
 
@@ -551,8 +551,8 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM39-42"><a href="/index.php/Category/index/cat_id/42.html">特价产品</a></li>
-            <li class="bm-nav-xls-left-li" id="BM39-52"><a href="/index.php/Category/index/cat_id/52.html">品牌工具包</a>
+            <li class="bm-nav-xls-left-li" id="BM39-42"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/42.html">特价产品</a></li>
+            <li class="bm-nav-xls-left-li" id="BM39-52"><a href="https://www.mr-banma.com/index.php/Category/index/cat_id/52.html">品牌工具包</a>
             </li>
             <li class="bm-nav-xls-left-li" id="BM39-50"><a
                     href="https://www.mr-banma.com/index.php/singlepage/company_buy.html">企业采购</a></li>
@@ -570,7 +570,7 @@
     </div>
     <div class="bm-nav-xls-right BM39-42 hide">
 
-        <a href="/index.php/Category/index/cat_id/42.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/42.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2020-11-20/5fb714276eab3.jpg"></a>
 
 
@@ -585,7 +585,7 @@
     </div>
     <div class="bm-nav-xls-right BM39-52 hide">
 
-        <a href="/index.php/Category/index/cat_id/52.html"><img
+        <a href="https://www.mr-banma.com/index.php/Category/index/cat_id/52.html"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-01-18/6004fb13dc3d9.jpg"></a>
 
 
@@ -632,11 +632,11 @@
     <div class="bm-nav-xls-left">
         <ul class="bm-nav-xls-left-ul">
             <!-- 此处li的id应与下列center和right的class相关联 -->
-            <li class="bm-nav-xls-left-li" id="BM62-63"><a href="/Singlepage/store">线下门店</a></li>
-            <li class="bm-nav-xls-left-li" id="BM62-38"><a href="/index.php/Singlepage/gongchang">斑马工厂</a></li>
-            <li class="bm-nav-xls-left-li" id="BM62-64"><a href="/Article/cat_list/cat_id/1">斑马动态</a></li>
-            <li class="bm-nav-xls-left-li" id="BM62-24"><a href="/Article/cat_list/cat_id/2">斑马小课堂</a></li>
-            <li class="bm-nav-xls-left-li" id="BM62-70"><a href="http://h2.veqxiu.net/q/92910572_VVI42RDE">斑马先生杂志</a>
+            <li class="bm-nav-xls-left-li" id="BM62-63"><a href="https://www.mr-banma.com/Singlepage/store">线下门店</a></li>
+            <li class="bm-nav-xls-left-li" id="BM62-38"><a href="https://www.mr-banma.com/index.php/Singlepage/gongchang">斑马工厂</a></li>
+            <li class="bm-nav-xls-left-li" id="BM62-64"><a href="https://www.mr-banma.com/Article/cat_list/cat_id/1">斑马动态</a></li>
+            <li class="bm-nav-xls-left-li" id="BM62-24"><a href="https://www.mr-banma.com/Article/cat_list/cat_id/2">斑马小课堂</a></li>
+            <li class="bm-nav-xls-left-li" id="BM62-70"><a href="https://www.mr-banma.com/h2.veqxiu.net/q/92910572_VVI42RDE">斑马先生杂志</a>
             </li>
         </ul>
     </div>
@@ -650,7 +650,7 @@
     </div>
     <div class="bm-nav-xls-right BM62-63 hide">
 
-        <a href="/Singlepage/store"><img src="https://www.mr-banma.com/Uploads/images/2021-05-13/609cf8f9827dd.jpg"></a>
+        <a href="https://www.mr-banma.com/Singlepage/store"><img src="https://www.mr-banma.com/Uploads/images/2021-05-13/609cf8f9827dd.jpg"></a>
 
 
     </div>
@@ -664,7 +664,7 @@
     </div>
     <div class="bm-nav-xls-right BM62-38 hide">
 
-        <a href="/index.php/Singlepage/gongchang"><img
+        <a href="https://www.mr-banma.com/index.php/Singlepage/gongchang"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-05-13/609cfe0c14511.jpg"></a>
 
 
@@ -679,7 +679,7 @@
     </div>
     <div class="bm-nav-xls-right BM62-64 hide">
 
-        <a href="/Article/cat_list/cat_id/1"><img
+        <a href="https://www.mr-banma.com/Article/cat_list/cat_id/1"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-05-13/609cfe4c0af8f.jpg"></a>
 
 
@@ -694,7 +694,7 @@
     </div>
     <div class="bm-nav-xls-right BM62-24 hide">
 
-        <a href="/Article/cat_list/cat_id/2"><img
+        <a href="https://www.mr-banma.com/Article/cat_list/cat_id/2"><img
                 src="https://www.mr-banma.com/Uploads/images/2021-05-13/609cf88f4dcab.jpg"></a>
 
     </div>
